--- a/lab-hypothesis-testing.ipynb
+++ b/lab-hypothesis-testing.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
        "[800 rows x 11 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,11 +297,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#code here"
+    "dragon = df[(df['Type 1']=='Dragon') | (df['Type 2']=='Dragon')]['HP']\n",
+    "grass = df[(df['Type 1']=='Grass') | (df['Type 2']=='Grass')]['HP']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We reject the null hypotesis\n"
+     ]
+    }
+   ],
+   "source": [
+    "_, p_value = st.ttest_ind(dragon, grass, alternative='greater')\n",
+    "\n",
+    "alpha = 0.05\n",
+    "\n",
+    "if p_value > alpha:\n",
+    "    print(\"We are not able to reject the null hypothesis\")\n",
+    "else:\n",
+    "    print(\"We reject the null hypotesis\")"
    ]
   },
   {
@@ -313,11 +338,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#code here"
+    "column = ['HP', 'Attack', 'Defense', 'Sp. Atk', 'Sp. Def', 'Speed']\n",
+    "legendary = df[df['Legendary']==True][column]\n",
+    "no_legendary = df[df['Legendary']==False][column]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_, p_value = st.ttest_ind(legendary,no_legendary, equal_var=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.00269117e-13, 2.52037245e-16, 4.82699849e-11, 1.55146141e-21,\n",
+       "       2.29493279e-15, 1.04901631e-18])"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HP\n",
+      "We reject the null hypotesis\n",
+      "Attack\n",
+      "We reject the null hypotesis\n",
+      "Defense\n",
+      "We reject the null hypotesis\n",
+      "Sp. Atk\n",
+      "We reject the null hypotesis\n",
+      "Sp. Def\n",
+      "We reject the null hypotesis\n",
+      "Speed\n",
+      "We reject the null hypotesis\n"
+     ]
+    }
+   ],
+   "source": [
+    "alpha=0.05\n",
+    "for i in range(len(p_value)):\n",
+    "    print(column[i])\n",
+    "    if p_value[i] > alpha:\n",
+    "        print(\"We are not able to reject the null hypothesis\")\n",
+    "    else:\n",
+    "        print(\"We reject the null hypotesis\")\n",
+    "    "
    ]
   },
   {
@@ -337,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +545,7 @@
        "4       624.0       262.0         1.9250             65500.0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,17 +575,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "school_coords = (-118, 37)\n",
+    "hospital_coords = (-122, 34)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def euclidean_distance(lat1, lon1, lat2, lon2):\n",
+    "    return np.sqrt((lat1 - lat2)**2 + (lon1 - lon2)**2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['distance_to_school'] = euclidean_distance(df['latitude'], df['longitude'], school_coords[1], school_coords[0])\n",
+    "df['distance_to_hospital'] = euclidean_distance(df['latitude'], df['longitude'], hospital_coords[1], hospital_coords[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['close_to_school_or_hospital'] = (df['distance_to_school'] < 0.50) | (df['distance_to_hospital'] < 0.50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "close_houses = df[df['close_to_school_or_hospital'] == True]\n",
+    "far_houses = df[df['close_to_school_or_hospital'] == False]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_, p_value = st.ttest_ind(close_houses['median_house_value'], far_houses['median_house_value'], alternative='greater', equal_var=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We are not able to reject the null hypothesis\n"
+     ]
+    }
+   ],
+   "source": [
+    "alpha = 0.05\n",
+    "\n",
+    "if p_value > alpha:\n",
+    "    print(\"We are not able to reject the null hypothesis\")\n",
+    "else:\n",
+    "    print(\"We reject the null hypotesis\")"
+   ]
   }
  ],
  "metadata": {
@@ -512,7 +670,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
