lab-hypothesis-testing

--- a/lab-hypothesis-testing.ipynb
+++ b/lab-hypothesis-testing.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
        "[800 rows x 11 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,19 +307,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "P value: 7.009713739308821e-06\n",
       "We reject the null hypotesis\n"
      ]
     }
    ],
    "source": [
     "_, p_value = st.ttest_ind(dragon, grass, alternative='greater')\n",
+    "print('P value:', p_value)\n",
     "\n",
     "alpha = 0.05\n",
     "\n",
@@ -338,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,45 +360,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1.00269117e-13, 2.52037245e-16, 4.82699849e-11, 1.55146141e-21,\n",
-       "       2.29493279e-15, 1.04901631e-18])"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "p_value"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "HP\n",
+      "P value HP: 1.0026911708035284e-13\n",
       "We reject the null hypotesis\n",
-      "Attack\n",
+      "P value Attack: 2.520372449236646e-16\n",
       "We reject the null hypotesis\n",
-      "Defense\n",
+      "P value Defense: 4.8269984949193316e-11\n",
       "We reject the null hypotesis\n",
-      "Sp. Atk\n",
+      "P value Sp. Atk: 1.5514614112239812e-21\n",
       "We reject the null hypotesis\n",
-      "Sp. Def\n",
+      "P value Sp. Def: 2.2949327864052826e-15\n",
       "We reject the null hypotesis\n",
-      "Speed\n",
+      "P value Speed: 1.049016311882451e-18\n",
       "We reject the null hypotesis\n"
      ]
     }
@@ -404,7 +385,7 @@
    "source": [
     "alpha=0.05\n",
     "for i in range(len(p_value)):\n",
-    "    print(column[i])\n",
+    "    print(f'P value {column[i]}:', p_value[i])\n",
     "    if p_value[i] > alpha:\n",
     "        print(\"We are not able to reject the null hypothesis\")\n",
     "    else:\n",
@@ -624,11 +605,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9999738999071939"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "_, p_value = st.ttest_ind(close_houses['median_house_value'], far_houses['median_house_value'], alternative='greater', equal_var=False)"
+    "_, p_value = st.ttest_ind(close_houses['median_house_value'], far_houses['median_house_value'], alternative='greater', equal_var=False)\n",
+    "p_value"
    ]
   },
   {
